<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinanceManagement</string>
    <string name="menu_settings">Settings</string>
    
    <string name="personal_finance">Personal Finance</string>
    <string name="group_finance">Group Finance</string>
    
    <string name="monthly_income">Monthly Income</string>
    <string name="credit_card_limit">Credit Card Limit</string>
    <string name="due_date">Due Date</string>
    <string name="expense">Expense</string>
    
    <string name="name">Name</string>
    <string name="email">Email</string>
    
    <string name="personal_details">Personal Details</string>
    <string name="expense_details">Expense Details</string>
    <string name="set">Set</string>
    
    <string name="_new">New</string>
    <string name="bill">Bill</string>
    
    <string name="who_paid">Who Paid</string>
    <string name="what_for">What For</string>
    
    <string name="item_name">Item Name</string>
    <string name="max_amount">Max Amount</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="done">Done</string>

</resources>