<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
		
    <EditText
        android:id="@+id/txtGroupExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/what_for"
        android:ems="10" />
	
    <EditText
        android:id="@+id/txtGroupExpenseWhoPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/who_paid"
        android:ems="10" />
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/bill"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/btnSetCreditCardLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="setGroupExpense"
        android:text="@string/set" />

</LinearLayout>