<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtCreditCardLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/credit_card_limit" />

    <EditText
        android:id="@+id/txtDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/due_date" />
    
    <Button
        android:id="@+id/btnSetCreditCardLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="setCreditCardLimit"
        android:text="@string/set" />    

</LinearLayout>